--- a/Sidebar/index.html
+++ b/Sidebar/index.html
@@ -15,13 +15,17 @@
   </head>
   <body class="bg-[#222831]">
     <header class="p-4 px-20">
-      <i class="fa-solid fa-bars text-white text-3xl"></i>
+      <i
+        class="fa-solid fa-bars open-sidebar cursor-pointer text-white text-3xl"
+      ></i>
       <aside
-        class="absolute flex flex-col gap-10 top-0 left-0 h-full bg-[#31363F] w-fit"
+        class="sidebar absolute flex flex-col gap-10 top-0 -left-0 -translate-x-full duration-300 h-full bg-[#31363F] w-fit"
       >
         <div class="navbar-header p-8 py-4 flex gap-40 items-center">
           <h1 class="text-2xl font-bold text-[#76ABAE]">Sidebar</h1>
-          <i class="fa-solid fa-x text-xl text-[#9B3922]"></i>
+          <i
+            class="fa-solid close-sidebar cursor-pointer fa-x text-xl text-[#9B3922]"
+          ></i>
         </div>
         <nav class="py-4">
           <ul>
@@ -48,5 +52,6 @@
         </div>
       </aside>
     </header>
+    <script src="app.js"></script>
   </body>
 </html>
