--- a/FAQ/index.html
+++ b/FAQ/index.html
@@ -18,14 +18,16 @@
       <h1 class="text-green-600 font-bold text-4xl text-center">
         General Questions
       </h1>
-      <div class="questions max-w-[500px] grid gap-5">
+      <div class="questions max-w-[400px] grid gap-5">
         <div class="question relative p-5 bg-white rounded-xl">
           <div class="question-title flex justify-between items-center gap-20">
             <p>Do You Accept All Major Credit Cards?</p>
-            <span class="plus-icon">
+            <span class="plus-icon cursor-pointer duration-300 hover:rotate-90">
               <i class="fa-regular fa-square-plus text-green-600 text-2xl"></i>
             </span>
-            <span class="minus-icon hidden">
+            <span
+              class="minus-icon duration-300 hover:rotate-90 cursor-pointer hidden"
+            >
               <i class="fa-regular fa-square-minus text-2xl text-green-600"></i>
             </span>
           </div>
@@ -40,10 +42,12 @@
         <div class="question relative p-5 bg-white rounded-xl">
           <div class="question-title flex justify-between items-center gap-20">
             <p>Do You Suppport Local Farmers?</p>
-            <span class="plus-icon">
+            <span class="plus-icon cursor-pointer duration-300 hover:rotate-90">
               <i class="fa-regular fa-square-plus text-green-600 text-2xl"></i>
             </span>
-            <span class="minus-icon hidden">
+            <span
+              class="minus-icon duration-300 hover:rotate-90 cursor-pointer hidden"
+            >
               <i class="fa-regular fa-square-minus text-2xl text-green-600"></i>
             </span>
           </div>
@@ -58,10 +62,12 @@
         <div class="question relative p-5 bg-white rounded-xl">
           <div class="question-title flex justify-between items-center gap-20">
             <p>Do You Use Organic Ingredients?</p>
-            <span class="plus-icon">
+            <span class="plus-icon cursor-pointer duration-300 hover:rotate-90">
               <i class="fa-regular fa-square-plus text-green-600 text-2xl"></i>
             </span>
-            <span class="minus-icon hidden">
+            <span
+              class="minus-icon duration-300 hover:rotate-90 cursor-pointer hidden"
+            >
               <i class="fa-regular fa-square-minus text-2xl text-green-600"></i>
             </span>
           </div>
