Added custom slider range

--- a/Interactive-pricing-component/index.html
+++ b/Interactive-pricing-component/index.html
@@ -42,14 +42,22 @@
             <p>No credit card required.</p>
           </div>
         </div>
-        <div class="pricing text-neutral-grayish-blue text-center grid gap-7">
+        <div class="pricing text-neutral-grayish-blue text-center grid gap-10">
           <div class="views">
-            <p class="views-label uppercase font-bold tracking-widest">
+            <p
+              class="views-label uppercase font-bold tracking-widest"
+            >
               100k pageviews
             </p>
           </div>
-          <div class="slider">
-            <p>SLIDER</p>
+          <div class="slider relative">
+            <input class="w-full slider-bar" type="range" name="" id="" />
+            <!-- <div class="slider-bar bg-neutral-l-grayish-blue h-2"></div>
+            <div
+              class="slider-icon top-1/2 -translate-y-1/2 left-1/2 -translate-x-1/2 absolute w-10 h-10 rounded-full bg-primary-light-red grid place-items-center"
+            >
+              <img src="images/icon-slider.svg" alt="" />
+            </div> -->
           </div>
           <div class="price flex justify-center items-center gap-2">
             <span
@@ -67,7 +75,7 @@
             </div>
             <p>Yearly Billing</p>
             <div class="discount absolute right-0">
-              <p>25%</p>
+              <p class="discount-amount">25%</p>
             </div>
           </div>
         </div>
