--- a/Interactive-pricing-component/index.html
+++ b/Interactive-pricing-component/index.html
@@ -71,7 +71,9 @@
               <span class="switch-circle transition-all duration-300"></span>
             </div>
             <p>Yearly Billing</p>
-            <div class="discount absolute right-0">
+            <div
+              class="discount absolute right-0 p-1 px-3 rounded-full bg-primary-light-red/20 font-extrabold text-primary-light-red"
+            >
               <p class="discount-amount">25%</p>
             </div>
           </div>
